refactor: replace the Java 9-11 APIs, except HTTP
Step 2a of the Bukkit port. Everything below Java 8 now compiles except the three
files using java.net.http, which is step 2b and deserves its own change.

Two helpers, and both reimplement the JDK rather than approximating it.

Strings.isBlank and Strings.strip are the ones worth explaining. The obvious Java 8
substitute for strip() is trim(), and it is NOT equivalent: trim removes characters
up to U+0020 and nothing else, so it leaves a non-breaking space, an ideographic
space and most of the Unicode whitespace block untouched, while strip uses
Character.isWhitespace. Substituting trim would have silently changed behaviour for
exactly the inputs hardest to notice -- a config value pasted from a document, a
name with an unusual space. StringsTest asserts both against the real JDK methods,
including one case where trim demonstrably differs.

Io covers InputStream.readAllBytes (Java 9) and Files.writeString (Java 11), used
wherever a config file is read or written -- the code least tolerant of a
behaviour change. writeString keeps the charset overload so call sites read exactly
as before; dropping the argument would have been fewer lines here and a worse diff,
since the charset is the last thing that should become implicit in config writing.

Also swaps List.of/Map.of/List.copyOf for their Collections equivalents. Behaviour
is unchanged except that the Java 8 forms tolerate nulls where the Java 9 factories
throw; nothing here passes one.

The regex that rewrote isBlank/strip mangled three field-access receivers --
f.value.isBlank() became f.Strings.isBlank(value). Caught by the compiler, which is
the second time this port has been found out by compiling rather than grepping.

268 tests pass at 17. Java 8 now fails only in DiscordWebhook, UpdateChecker and
ServerCompat.